# pymol-ai-MCP

./: .gitignore  README.md  build_exe.py  config.example.json  mcp-config-example.json  pymol-mcp-server.spec  pymol_mcp_server.py  pymol_rpc_launcher.py  pymol_rpc_launcher_README.md  pyproject.toml  requirements.txt  start_pymol_server.bat  start_pymol_server.sh  test_connection.py
pymol_plugin/: README.md  __init__.py  rpc_launcher.py
skills/pymol-control/: SKILL.md
